# CashewMath

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: create_unit_test.cmake
include/: CashewMath.h
include/Cashew/: Linear.h  Math.h  Random.h  Util.h
include/Cashew/Linear/: Matrix.h  SpecialTypes.h  Vector.h
include/Cashew/Random/: Generator.h
include/Cashew/Util/: FastInvSqrt.h  Sqrt.h  uint128_t.h
include/CashewMath/: CashewMath.h  Linear.h
include/CashewMath/Linear/: Matrix.h
include/linear/: Linear.h  Matrix.h
test/: CMakeLists.txt  bad.cpp  good.cpp  output.cpp
test/Linear/: AdditionOperators.cpp  ArithmeticOperators.cpp  AssignmentOperators.cpp  BracketOperator.cpp  BracketOperators.cpp  CMakeLists.txt  ComparisonOperators.cpp  Construction.cpp  DivisionOperators.cpp  MatrixInverse.cpp  MatrixMultiplicationOperators.cpp  MatrixTranspose.cpp  MultiplicationOperators.cpp  ScalarDivisionOperators.cpp  ScalarMultiplicationOperators.cpp  SubtractionOperators.cpp  VectorDotCross.cpp  VectorNormalization.cpp  VectorNormalizationFast.cpp  VectorNormalizationHeader.h  get_set_output.cpp  memory.cpp  output.cpp
test/Random/: CMakeLists.txt
test/Util/: CMakeLists.txt  SquareRoots.cpp
